--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="cabecalho">
+
+    </header>
     <h1>Apolo</h1>
    Apolo 
 <img src="CORINTHIANS-1-1.webp" alt="imagem do melhor clube paulista do mundo">
+<p>
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos maxime, fuga assumenda adipisci, odio ipsum laborum laboriosam molestiae itaque sint quisquam libero a tenetur nisi quo? Unde ipsam voluptatem reiciendis.
+</p>
+<p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum molestiae totam quas vel corporis accusantium velit, ducimus nemo illo. Incidunt animi odit soluta cumque explicabo a quidem laborum. Esse, debitis?
+</p>
+
+
+
+
 
 </body>
 </html>
