--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     </header>
 
 <section class="primeirasecao">
+<div class="divisao">
+
+</div>
+<div
+class="divisao">
+
+</div>
 
 </section>
 
