--- a/index.html
+++ b/index.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira pagina web</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="cabecalho">
 
     </header>
 
-<section class="primeirasecao">
-<div class="divisao">
+    <section class="primeirasecao">
+        <div class="divisao">
 
-</div>
-<div
-class="divisao">
+        </div>
+        <div class="divisao">
 
-</div>
+        </div>
 
-</section>
+    </section>
 
 
 
     <h1>Apolo</h1>
-   Apolo 
-<img src="CORINTHIANS-1-1.webp" alt="imagem do melhor clube paulista do mundo">
-<p>
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos maxime, fuga assumenda adipisci, odio ipsum laborum laboriosam molestiae itaque sint quisquam libero a tenetur nisi quo? Unde ipsam voluptatem reiciendis.
-</p>
-<p>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum molestiae totam quas vel corporis accusantium velit, ducimus nemo illo. Incidunt animi odit soluta cumque explicabo a quidem laborum. Esse, debitis?
-</p>
+    Apolo
+    <img src="CORINTHIANS-1-1.webp" alt="imagem do melhor clube paulista do mundo">
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos maxime, fuga assumenda adipisci, odio
+        ipsum laborum laboriosam molestiae itaque sint quisquam libero a tenetur nisi quo? Unde ipsam voluptatem
+        reiciendis.
+    </p>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum molestiae totam quas vel corporis accusantium
+        velit, ducimus nemo illo. Incidunt animi odit soluta cumque explicabo a quidem laborum. Esse, debitis?
+    </p>
 
 
 
 
 
 </body>
+
 </html>
