--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
     <section class="primeirasecao">
         <div class="divisao">
-
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima dolorum perspiciatis quasi nostrum corporis sunt similique! Quaerat repellendus praesentium perspiciatis non doloribus tempora, corrupti ab similique a eaque maiores? Vel.
+        
+    
         </div>
         <div class="divisao">
-
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit architecto nulla aspernatur illo similique et eligendi quisquam veritatis porro quis, nam molestias, delectus qui libero asperiores odio rem possimus quam!
         </div>
 
     </section>
